Add footer section
Includes:

- our own copyright.
- iTunes copyright.

Add:

- great-books-logo.png for review.

Update:

- style.css for footer fonts and background setup.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto&display=swap');
 
-
 * {
   margin: 0;
   padding: 0;
@@ -30,4 +29,39 @@ nav ul li a {
   text-decoration: none;
   color: white;
   font-size: 1.2rem;
+}
+
+footer {
+  background-color: grey;
+  padding: 2vw;
+}
+
+h3 {
+  font-size: 1.5vw;
+}
+
+h4 {
+  font-size: 1vw;
+}
+
+h5 {
+  font-size: 0.8vw;
+}
+
+#footer-div {
+  display: flex;
+  gap: 1vw;
+  justify-content: center;
+}
+
+#footer-left {
+  text-align: end;
+  width: 100%;
+  color: white;
+}
+
+#footer-right {
+  width: 100%;
+  color: darkgray;
+  align-self: flex-end;
 }
