--- a/src/style.css
+++ b/src/style.css
@@ -246,13 +246,13 @@ h5 {
 }
 
 .popup {
-  width: calc(100vw - 20%);
+  width: calc(100vw - 40%);
   height: calc(100vh - 20%);
   margin: 60px auto;
   background-color: #fff;
   border: 1px solid grey;
   border-radius: 8px;
-  padding: 16px 24px;
+  padding: 16px 40px;
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -263,6 +263,7 @@ h5 {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  padding: 0 40px;
 }
 
 .cross-icon {
@@ -320,7 +321,12 @@ h5 {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding-left: 40px;
 }
+
+.comment-container {
+  padding-left: 40px;
+} 
 
 /* add comment */
 
@@ -333,7 +339,7 @@ h5 {
 
 form {
   width: 100%;
-  padding: 0 40px;
+  padding: 0 80px;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -352,6 +358,6 @@ textarea:focus {
 
 @media only screen and (max-width: 768px) {
   .popup {
-    width: 80%;
+    width: calc(100vw - 20%);
   }
 }
