--- a/src/style.css
+++ b/src/style.css
@@ -41,15 +41,20 @@ footer {
 }
 
 h3 {
-  font-size: 4vh;
+  font-size: 3vw;
 }
 
 h4 {
-  font-size: 2.5vh;
+  font-size: 2.5vw;
 }
 
 h5 {
   font-size: 2vh;
+}
+
+p {
+  font-size: 1.8vw;
+  font-weight: lighter;
 }
 
 #footer-div {
@@ -109,7 +114,7 @@ h5 {
     flex-direction: column;
     margin: 5vh 2.5vh;
     padding: 5vh 2.5vh;
-    width: 45%;
+    width: 43%;
     justify-content: flex-start;
     gap: 0;
   }
@@ -117,7 +122,7 @@ h5 {
 
 @media only screen and (min-width: 992px) {
   .ebook-item {
-    width: 29.5%;
+    width: 28%;
   }
 }
 
@@ -129,6 +134,11 @@ h5 {
 
 .ebook-image-div {
   align-self: center;
+}
+
+.ebook-image {
+  width: 100%;
+  height: auto;
 }
 
 .content-div {
@@ -173,13 +183,25 @@ h5 {
 }
 
 .ebook-list-title {
-  font-size: 4vh;
+  font-size: 3.6vw;
+}
+
+@media only screen and (min-width: 768px) {
+  .ebook-list-title {
+    font-size: 2.4vw;
+  }
 }
 
 .ebook-list-author {
-  font-size: 2.5vh;
+  font-size: 2.3vw;
   color: darkgrey;
   font-style: italic;
+}
+
+@media only screen and (min-width: 768px) {
+  .ebook-list-author {
+    font-size: 1.6vw;
+  }
 }
 
 .heart-icon {
@@ -191,11 +213,17 @@ h5 {
 }
 
 .ebook-like-count {
-  font-size: 2vh;
+  font-size: 1.8vw;
+}
+
+@media only screen and (min-width: 768px) {
+  .ebook-like-count {
+    font-size: 1.4vw;
+  }
 }
 
 .contact-button-div {
-  margin-top: 2vh;
+  margin-top: 2vw;
   text-align: start;
 }
 
@@ -206,23 +234,25 @@ h5 {
 }
 
 .contact-button {
-  padding: 1vh 3vh;
+  padding: 1vw 3vw;
   background-color: white;
   border: 2px solid tomato;
   border-radius: 4px;
-  font-size: 2vh;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.6vw;
 }
 
 .btn-comment {
-  padding: 1vh 3vh;
+  padding: 1vw 3vw;
   background-color: white;
   border: 2px solid tomato;
   border-radius: 4px;
-  font-size: 2vh;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.6vw;
+  color: grey;
 }
 
-.contact-button:hover,
-.btn-comment:hover {
+.contact-button:hover {
   background-color: tomato;
   border: 3px solid darkgrey;
   color: white;
@@ -230,48 +260,62 @@ h5 {
   cursor: pointer;
 }
 
-/* @media only screen and (min-width: 768px) {
-  .work-item-popup {
-    margin: 77px 16vw;
-  }
+.btn-comment:hover {
+  background-color: tomato;
+  border: 3px solid white;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-@media only screen and (min-width: 1440px) {
-  .work-item-popup {
-    margin: 77px 22vw;
-  }
-} */
 
 /* Item details */
 
 .popup-section {
-  width: 100%;
-  height: 100%;
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
-  backdrop-filter: blur(4px);
+  width: 100%;
+  height: 100vh;
+  opacity: 95%;
+  backdrop-filter: blur(80px);
+  transition: height 1s ease;
+  padding: 20px;
 }
 
 .popup {
-  width: calc(100vw - 40%);
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border: 5px solid grey;
+  border-radius: 10px;
+  padding: 10px 10px;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px;
+}
+
+/*
+.popup {
+  width: calc(100vw - 20%);
   height: calc(100vh - 20%);
   margin: 60px auto;
   background-color: #fff;
-  border: 1px solid grey;
-  border-radius: 8px;
+  border: 10px solid tomato;
+  border-radius: 10px;
   padding: 16px 40px;
   overflow: auto;
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
+*/
 
 .item-details {
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  padding: 0 40px;
+  text-align: center;
 }
 
 .cross-icon {
@@ -287,14 +331,19 @@ h5 {
 }
 
 .book-title {
-  text-align: center;
+  gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: tomato;
+  color: #fff;
+  padding: 4px 0;
+  border-radius: 5px;
 }
 
 .book-detail {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin: 0 40px;
+  gap: 10px;
 }
 
 .hide {
@@ -312,12 +361,14 @@ h5 {
 .cross-icon img {
   width: 20px;
   height: 20px;
+  margin-top: 20px;
 }
 
 .book-img {
-  width: 80%;
-  height: 450px;
-  margin: 0 auto;
+  max-width: 200px;
+  width: 100%;
+  height: auto;
+  align-self: center;
 }
 
 /* comments details */
@@ -326,18 +377,22 @@ h5 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: tomato;
+  color: #fff;
+  padding: 4px 0;
+  border-radius: 5px;
 }
 
 .comment-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding-left: 40px;
+  gap: 5px;
 }
 
 .comment-container {
-  padding-left: 40px;
 }
 
 /* add comment */
@@ -345,8 +400,13 @@ h5 {
 .add-comment {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 10px;
   margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: tomato;
+  color: #fff;
+  padding: 15px 0;
+  border-radius: 5px;
 }
 
 form {
@@ -360,18 +420,17 @@ form {
 input,
 textarea {
   padding: 8px 10px;
+  border-radius: 5px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.6vw;
 }
 
 input:focus,
 textarea:focus {
-  border: none;
+  border: 1px solid grey;
   outline: 2px solid tomato;
-}
-
-@media only screen and (max-width: 768px) {
-  .popup {
-    width: calc(100vw - 20%);
-  }
+  font-family: 'Roboto', sans-serif;
 }
 
 .nav-selected {
@@ -388,8 +447,7 @@ textarea:focus {
   top: 0;
   right: 0;
   display: inline-block;
-  min-width: 10px;
-  padding: 0.4vw 0.7vw;
+  padding: 0.4vw 0.5vw;
   font-size: 1vw;
   font-weight: bold;
   color: white;
@@ -398,5 +456,32 @@ textarea:focus {
   vertical-align: baseline;
   background-color: grey;
   border-radius: 50%;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+
+#popup-desc {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  text-align: start;
+}
+
+.comments-count {
+  position: relative;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  padding: 0.4vw 0.9vw;
+  font-size: 1.6vw;
+  font-weight: bold;
+  color: grey;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: white;
+  border-radius: 50%;
   margin-bottom: 2px;
+  margin-left: 0;
 }
